# mycli

./: .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml  tox.toml
mycli/: _subparser_action.py  actions.py  app.py  args_types.py  command.py  parser.py
tests/test_app_all_arg_types/: app.py  test_app.py
tests/test_app_custom_class/: app.py  test_app.py
tests/test_app_flag_only/: app.py  test_app.py
tests/test_app_with_serializer_1/: app.py  test_app.py
tests/test_app_with_serializer_2/: app.py  test_app.py
